--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,34 @@
     width: 50%;
 }
 
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
 .center {
     margin: auto;
     width: 50%;
@@ -39,6 +67,17 @@
     content: "";
     display: table;
     clear: both;
+}
+
+.card {
+  border-radius: 5px;
+}
+
+.white-card {
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  font-weight: bold
 }
 
 @keyframes App-logo-spin {
