--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
 .center {
     margin: auto;
     width: 50%;
-    border: 3px solid green;
+    /* border: 3px solid green; */
     padding: 10px;
 }
 
