--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  /*border: 1px solid red;*/
+}
+
 .App {
   text-align: center;
 }
@@ -7,12 +11,12 @@
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+/*.App-header {
+  width: 1024px;
+  height: 50px;
+  background-color: #323639;
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0);
+}*/
 
 .App-title {
   font-size: 1.5em;
@@ -23,43 +27,80 @@
 }
 
 .column {
-    float: left;
-    width: 50%;
+    /*float: left;*/
+    /*width: 50%;*/
+}
+
+h2 {
+  font-family: Arial;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ffffff;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
     overflow: hidden;
+    width: 100%;
+    height: 50px;
+    background-color: #323639;
+    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0);
+
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    text-align: center;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
     float: left;
     color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
+    /*text-align: center;*/
     text-decoration: none;
-    font-size: 17px;
+
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #d6d6d7;
+    margin-right: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    /*background-color: #ddd;*/
+    color: white;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-    background-color: #4CAF50;
+    /*background-color: #4CAF50;*/
     color: white;
 }
 
-.center {
-    margin: auto;
-    width: 50%;
-    /* border: 3px solid green; */
-    padding: 10px;
+.topnav h2 {
+  color: white;
+  margin-left: 20px;
+}
+
+.topnav h2:hover {
+  text-decoration: none;
+}
+
+.topnav h2.active {
+  text-decoration: none;
 }
 
 /* Clear floats after the columns */
@@ -70,7 +111,7 @@
 }
 
 .card {
-  border-radius: 5px;
+  /*border-radius: 5px;*/
 }
 
 .white-card {
@@ -80,11 +121,46 @@
   font-weight: bold
 }
 
+.black-card-in-play {
+  display: flex;
+  justify-content: center;
+
+
+  /*background-color: red;*/
+}
+
+.center {
+    /*margin: auto;
+    width: 50%;
+     border: 3px solid green;
+    padding: 10px;*/
+
+    display: none;
+    flex-direction: column;
+}
+
 .black-card {
-  background-color: black;
-  border: 2px solid black;
   color: white;
-  font-weight: bold
+  font-weight: bold;
+
+  width: 318px;
+  height: 398px;
+  border-radius: 5px;
+  background-color: #323639;
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
+
+  font-family: Arial;
+  font-size: 32px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  margin-top: 32px;
+}
+
+p {
+  margin: 20px;
 }
 
 
