--- a/src/App.css
+++ b/src/App.css
@@ -2,33 +2,20 @@
   /*border: 1px solid red;*/
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-/*.App-header {
-  width: 1024px;
-  height: 50px;
-  background-color: #323639;
-  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0);
-}*/
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
 .column {
     /*float: left;*/
     /*width: 50%;*/
+}
+
+h1 {
+  font-family: Arial;
+  font-size: 32px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #333333;
 }
 
 h2 {
@@ -42,11 +29,28 @@ h2 {
   color: #ffffff;
 }
 
+p {
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.54);
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
-    overflow: hidden;
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 50px;
+    /* Ensure nav always at front*/
+    z-index: 9999;
+
+    overflow: hidden;
     background-color: #323639;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0);
 
@@ -104,10 +108,19 @@ h2 {
 }
 
 /* Clear floats after the columns */
-.row:after {
+/*.row:after {
     content: "";
     display: table;
     clear: both;
+}*/
+
+.content {
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+
+  /* Ensure navbar isn't overlaying*/
+  margin-top: 50px;
 }
 
 .card {
@@ -122,33 +135,38 @@ h2 {
 }
 
 .black-card-in-play {
+  width: 321px;
+
   display: flex;
   justify-content: center;
-
 
   /*background-color: red;*/
 }
 
-.center {
-    /*margin: auto;
-    width: 50%;
-     border: 3px solid green;
-    padding: 10px;*/
+.white-cards-in-play {
+  width: 671px;
+  background-color: blue;
+  overflow: auto;
+}
 
+.center {
     display: none;
-    flex-direction: column;
+}
+
+.propose-black-card {
+  color: red;
+  display: none;
 }
 
 .black-card {
-  color: white;
-  font-weight: bold;
-
   width: 318px;
   height: 398px;
   border-radius: 5px;
   background-color: #323639;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
+  margin-top: 32px;
 
+  color: white;
   font-family: Arial;
   font-size: 32px;
   font-weight: bold;
@@ -156,11 +174,17 @@ h2 {
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
-  margin-top: 32px;
+
 }
 
-p {
-  margin: 20px;
+.card-text {
+  padding: 20px;
+}
+
+.time-left {
+  margin-top: 32px;
+  text-align: center;
+  /*height: 52px;*/
 }
 
 
