--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
   /*border: 1px solid red;*/
 }
 
-.column {
-    /*float: left;*/
-    /*width: 50%;*/
+.appContainer {
+  height: 100vh;
+  width: 100vw;
+  background-color: #e9ebee;
 }
 
 h1 {
@@ -39,6 +40,17 @@ p {
   letter-spacing: normal;
   text-align: center;
   color: rgba(0, 0, 0, 0.54);*/
+}
+
+.header-brand {
+  font-family: Arial;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ffffff;
 }
 
 .header-1 {
@@ -84,10 +96,13 @@ p {
 
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
+    /*float: left;*/
     color: #f2f2f2;
     /*text-align: center;*/
     text-decoration: none;
+    border-color: red;
+
+    margin-left: 16px;
 
     font-family: Arial;
     font-size: 16px;
@@ -127,6 +142,11 @@ p {
 
 .topnav h2.active {
   text-decoration: none;
+}
+
+.primary-button {
+  background-color: red;
+  border: 1px solid red;
 }
 
 .content {
@@ -193,8 +213,8 @@ p {
 
 .white-card-row {
   width: 505px;
-
   padding: 0px;
+  margin-top: 24px;
 
   display: flex;
   flex-direction: row;
@@ -203,6 +223,8 @@ p {
   justify-content: space-between;
 
   position: relative;
+
+  /*background-color: red;*/
 }
 
 .left-side {
@@ -227,7 +249,6 @@ p {
 .balance-label-div {
   text-align: left;
 }
-
 
 .white-card {
   background-color: white;
@@ -259,7 +280,11 @@ p {
 }
 
 .white-card-filter {
+  display: flex;
+}
 
+.white-card-filter-item-active {
+  border-bottom: 3px solid #323639;
 }
 
 @keyframes App-logo-spin {
