--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ p {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 50px;
+    height: 60px;
     /* Ensure nav always at front*/
     z-index: 9999;
 
@@ -92,6 +92,7 @@ p {
     flex-direction: row;
     align-items: stretch;
     text-align: center;
+    justify-content: space-between;
 }
 
 /* Style the links inside the navigation bar */
@@ -144,6 +145,18 @@ p {
   text-decoration: none;
 }
 
+.nav-right {
+  width: 540px;
+
+  display: flex;
+  flex-direction: row;
+  margin-right: 16px;
+}
+
+.nav-left {
+  margin-left: 16px;
+}
+
 .primary-button {
   background-color: red;
   border: 1px solid red;
@@ -155,7 +168,7 @@ p {
   /*height: 100vh;*/
 
   /* Ensure navbar isn't overlaying*/
-  margin-top: 50px;
+  margin-top: 60px;
 }
 
 .card {
@@ -230,10 +243,19 @@ p {
 .left-side {
   /*background-color: purple;*/
   width: 312px;
+  height: 186px;
   /*margin-left: 109px;*/
   position: absolute;
   top: 0px;
   right: 0px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content:
+}
+
+.trave-div {
+  flex-grow: 1;
 }
 
 .white-card-labels {
